src/plugins/snapshots/blktrace_reader__plugins__plugin_set__tests__plugin_set_no_updates.snap
---
source: src/plugins/plugin_set.rs
expression: plugin_set.result()
---
## Request Size
Reqs. #: 0 Reads: 0 (NaN%) Writes: 0 (NaN%) Size:(min: 4294967295 avg: NaN max: 0 (blks))
